--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -6,9 +6,13 @@
 		"profile welcome welcome"
 		"profile actions reports";
 	grid-template-columns: 330px 600px 410px;
-	// 380px repeat(2, 1fr)
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+
+	svg,
+	a {
+		color: $link;
+	}
 
 	td {
 		font-size: 16px;
@@ -16,98 +20,155 @@
 		color: $text;
 	}
 
-	svg,
-	a {
-		&:not(.setting) {
-			color: $link;
-		}
-	}
+	.dash_profile {
+		grid-area: profile;
+		border-radius: 15px;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 
+		.settingIcon {
+			position: absolute;
+			left: 70px;
+			top: 65px;
 
-
-}
-
-.profile_card {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	// svg {
-	// 	color: $link;
-	// }
-
-	// p {
-	// 	color: $text;
-	// }
-
-	.name {
-		margin: 1rem auto;
-		display: grid;
-		grid-template-columns: 64px auto;
-		grid-template-rows: auto 70px;
-		text-align: left;
-
-		.role {
-			color: #ADB5BD;
-			grid-column: 2;
-			padding-bottom: 1.5rem;
-			font-size: 13px;
-			position: relative;
-			left: 8px;
+			svg {
+				font-size: 25px;
+				color: $body2;
+			}
 		}
 
-	}
+		.profileTitle {
+			.MuiTypography-root {
 
-	.quick_access {
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: auto;
-		text-align: center;
+				padding-top: 25px;
+				color: #666666;
+				font-size: 20px;
+				font-family: 'BCSans-Bold';
+				text-align: center;
+			}
+		}
 
-		width: 100%;
-
-		.actions {
+		.profile_card {
 			display: flex;
-			justify-content: space-evenly;
-			margin-bottom: 10px;
+			flex-direction: column;
+			align-items: center;
 
-			p {
-				font-size: 10px;
-				margin: 0;
-				opacity: 0;
-				position: absolute;
+			.userIcon {
+				font-size: 200px;
 			}
 
-			.generateBtn:hover {
-				p {
-					left: 60px;
-					opacity: 1;
-					color: #495057;
+			.userInfo {
+				margin: 1rem auto;
+				display: grid;
+				grid-template-columns: 64px auto;
+				grid-template-rows: auto 70px;
+				text-align: left;
+
+				.name {
+					font-size: 16px;
+				}
+
+				.role {
+					color: #ADB5BD;
+					grid-column: 2;
+					padding-bottom: 1.5rem;
+					font-size: 13px;
+					position: relative;
+					left: 8px;
+				}
+
+				.phoneIcon,
+				.emailIcon,
+				.businessIcon {
+					margin-bottom: 20px;
+				}
+
+				.infoText {
+					font-size: 13px;
+				}
+
+			}
+
+			.divider1 {
+				position: relative;
+				top: -175px;
+			}
+
+			.divider2 {
+				margin-bottom: 25px;
+			}
+
+			.quick_access {
+				margin-left: auto;
+				margin-right: auto;
+				margin-top: auto;
+				text-align: center;
+				width: 100%;
+
+				.quickAccessText {
+					margin-bottom: 10px;
+					font-size: 16px;
+				}
+
+				.actions {
+					display: flex;
+					justify-content: space-evenly;
+					margin-bottom: 10px;
+
+					p {
+						font-size: 10px;
+						margin: 0;
+						opacity: 0;
+						position: absolute;
+					}
+
+					.generateBtn:hover {
+						p {
+							left: 60px;
+							opacity: 1;
+							color: #495057;
+						}
+					}
+
+					.searchBtn:hover {
+						p {
+							left: 150px;
+							opacity: 1;
+							color: #495057;
+						}
+					}
+
+					.actionBtn:hover {
+						p {
+							left: 210px;
+							opacity: 1;
+							color: #495057;
+						}
+					}
 				}
 			}
+		}
+	}
 
-			.searchBtn:hover {
-				p {
-					left: 150px;
-					opacity: 1;
-					color: #495057;
-				}
+	.dash_welcome {
+		grid-area: welcome;
+		border-radius: 15px;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+		.MuiCardHeader-root {
+			padding: 30px 0 10px 35px;
+
+			.MuiCardHeader-title {
+				font-family: 'BCSans-Bold';
+				padding-top: 10px;
+				color: #666666;
+				font-size: 20px;
 			}
 
-			.actionBtn:hover {
-				p {
-					left: 210px;
-					opacity: 1;
-					color: #495057;
-				}
+			.MuiCardHeader-subheader {
+				padding-top: 20px;
+				font-size: 16px;
+				color: #313132;
 			}
-
-			// svg button {
-			// 	// &:not(:last-child) {
-			// 	// 	margin-right: 16px;
-			// 	// }
-
-			// }
 
 		}
 	}
@@ -132,48 +193,336 @@
 	}
 }
 
-// .action_area{
-// 	svg, a{
-// 		color: $link;
-// 	}
-// 	td{
-// 		color: $text;
-// 	}
-// }
+.actionTitle,
+.reportTitle {
+	padding: 30px 50px 10px 30px;
+	align-items: center;
 
-.count_num {
-	color: #fcba19;
+	svg {
+		font-size: 30px;
+	}
+
+	.MuiLink-root {
+		cursor: pointer;
+		text-decoration: none;
+		font-size: 20px;
+		font-family: 'BCSans-Bold';
+	}
+}
+
+#dash_actions,
+.dash_actions {
+	grid-area: actions;
+	border-radius: 15px;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+	.MuiCardContent-root {
+		padding-left: 33px;
+
+		tr {
+			td:nth-child(2) {
+				text-align: right;
+				padding-left: 40px;
+			}
+		}
+	}
+}
+
+#dash_reports,
+.dash_reports {
+	grid-area: reports;
+	border-radius: 15px;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+	.MuiCardContent-root {
+		padding-left: 33px;
+
+		tr {
+			td:nth-child(1) {
+				text-align: right;
+				color: #FCBA19;
+			}
+
+			td:nth-child(3) {
+				font-size: 12px;
+				color: #495057;
+			}
+		}
+	}
+
 }
 
 
 //action management
 
-.checkIcon {
-	margin: auto;
-	width: 78px;
-	height: 78px;
-	border-radius: 999rem;
-	background-color: #3ADB76;
-	position: relative;
-	top: -35px;
+.actionManagement_profile,
+#actionManagement_profile {
+	width: 330px;
+	margin-right: 15px;
+	border-radius: 15px;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+	svg,
+	a {
+		color: $link;
+	}
+
+	.settingIcon {
+		position: absolute;
+		left: 70px;
+		top: 65px;
+
+		svg {
+			font-size: 25px;
+			color: $body2;
+		}
+	}
+
+	.profileTitle {
+		.MuiTypography-root {
+
+			padding-top: 25px;
+			color: #666666;
+			font-size: 20px;
+			font-family: 'BCSans-Bold';
+			text-align: center;
+		}
+	}
+
+	.profile_card {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		.userIcon {
+			font-size: 200px;
+		}
+
+		.userInfo {
+			margin: 1rem auto;
+			display: grid;
+			grid-template-columns: 64px auto;
+			grid-template-rows: auto 70px;
+			text-align: left;
+
+			.name {
+				font-size: 16px;
+			}
+
+			.role {
+				color: #ADB5BD;
+				grid-column: 2;
+				padding-bottom: 1.5rem;
+				font-size: 13px;
+				position: relative;
+				left: 8px;
+			}
+
+			.phoneIcon,
+			.emailIcon,
+			.businessIcon {
+				margin-bottom: 20px;
+			}
+
+			.infoText {
+				font-size: 13px;
+			}
+
+		}
+
+		.divider1 {
+			position: relative;
+			top: -175px;
+		}
+
+		.divider2 {
+			margin-bottom: 25px;
+		}
+
+		.quick_access {
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: auto;
+			text-align: center;
+			width: 100%;
+
+			.quickAccessText {
+				margin-bottom: 10px;
+				font-size: 16px;
+			}
+
+			.actions {
+				display: flex;
+				justify-content: space-evenly;
+				margin-bottom: 10px;
+
+				p {
+					font-size: 10px;
+					margin: 0;
+					opacity: 0;
+					position: absolute;
+				}
+
+				.generateBtn:hover {
+					p {
+						left: 60px;
+						opacity: 1;
+						color: #495057;
+					}
+				}
+
+				.searchBtn:hover {
+					p {
+						left: 150px;
+						opacity: 1;
+						color: #495057;
+					}
+				}
+
+				.actionBtn:hover {
+					p {
+						left: 230px;
+						opacity: 1;
+						color: #495057;
+					}
+				}
+			}
+		}
+	}
 }
 
-.okBtn {
-	width: 110px;
-	height: 45px;
-	font-size: 16px;
-	border-radius: 6px;
+.actionManagement_welcome,
+#actionManagement_welcome {
+	width: 1050px;
+	border-radius: 15px;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+	.MuiCardHeader-root {
+		padding: 30px 0 10px 50px;
+
+		.MuiCardHeader-title {
+			font-family: 'BCSans-Bold';
+			padding-top: 10px;
+			color: #666666;
+			font-size: 20px;
+		}
+
+		.MuiCardHeader-subheader {
+			padding-top: 20px;
+			font-size: 16px;
+			color: #313132;
+		}
+	}
+
+	.MuiCardContent-root {
+		padding-left: 50px;
+
+		.action_inputs {
+			width: 390px;
+		}
+
+		.date {
+			margin-right: 65px;
+		}
+
+		.note {
+			width: 845px;
+		}
+
+		.Notification {
+			display: flex;
+			align-items: center;
+
+			.MuiTypography-root {
+				margin-right: 70px;
+			}
+
+			.MuiTypography-root,
+			.MuiFormControlLabel-root {
+				color: $body2;
+				font-size: 16px;
+			}
+		}
+
+		.reminderBtn {
+			text-transform: capitalize;
+			margin: 75px 0 20px 775px;
+			width: 131px;
+			height: 36px;
+
+		}
+
+	}
 }
 
-.MuiPickersToolbar-content{
-	// color: $link;
+.success_dialog {
+	.MuiPaper-root {
+		overflow-y: inherit;
+		width: 504px;
+		height: 230px;
+		border-radius: 10px;
+	}
 
-	.MuiPickersToolbar-penIconButton{
+	.checkIcon {
+		margin: auto;
+		width: 78px;
+		height: 78px;
+		border-radius: 999rem;
+		background-color: #3ADB76;
+		position: relative;
+		top: -35px;
+
+		svg {
+			position: relative;
+			top: 17px;
+			left: 17px;
+			font-size: 45px;
+			color: #ffffff;
+		}
+	}
+
+	.dialogCloseBtn {
+		position: absolute;
+		right: 8px;
+		top: 8px;
+	}
+
+	.MuiDialogContent-root {
+		margin: auto;
+		padding: 0 24px;
+		text-align: center;
+
+		p {
+			color: #666666;
+			font-size: 16px;
+			margin: 5px 0;
+		}
+	}
+
+	.MuiDialogActions-root {
+		margin: auto;
+		margin-bottom: 20px;
+
+		.okBtn {
+			width: 110px;
+			height: 45px;
+			font-size: 16px;
+			border-radius: 6px;
+			background-color: #3ADB76;
+			color: #ffffff;
+		}
+	}
+}
+
+.MuiPickersToolbar-content {
+
+	.MuiPickersToolbar-penIconButton {
 		display: none;
 	}
 }
-//toolbar action color
-button[class^="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e0vxdt-MuiButtonBase-root-MuiButton-root"], button[class*="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e0vxdt-MuiButtonBase-root-MuiButton-root"] { color: $link; }
 
-//selected day's color
-// button[class^="MuiButtonBase-root MuiPickersDay-root Mui-selected MuiPickersDay-dayWithMargin css-qr3n4k-MuiButtonBase-root-MuiPickersDay-root"], button[class*="MuiButtonBase-root MuiPickersDay-root Mui-selected MuiPickersDay-dayWithMargin css-qr3n4k-MuiButtonBase-root-MuiPickersDay-root"] { background-color: $link !important; }
+//toolbar action color
+button[class^="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e0vxdt-MuiButtonBase-root-MuiButton-root"],
+button[class*="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e0vxdt-MuiButtonBase-root-MuiButton-root"] {
+	color: $link;
+}
