--- a/src/main/styles/search.scss
+++ b/src/main/styles/search.scss
@@ -95,18 +95,82 @@
                 margin-block: 15px;
             }
 
-            .MuiDataGrid-columnSeparator{
+            .MuiDataGrid-columnSeparator {
                 display: none;
             }
-            .MuiDataGrid-columnHeaders{
+
+            .MuiDataGrid-columnHeaders {
                 background-color: #ececec;
             }
+
+            .actions {
+                display: contents;
+                align-items: center;
+
+                button:nth-child(1) {
+                    font-size: 12px;
+                    width: 108px;
+                    height: 23px;
+                    text-transform: capitalize;
+                    margin-right: 12px;
+                }
+
+                button:nth-child(2) {
+                    font-size: 12px;
+                    width: 108px;
+                    height: 23px;
+                    text-transform: capitalize;
+                }
+
+
+            }
+
+            .data {
+
+                ///Status Signal
+                .ASSIGNED {
+                    background-color: #4caf50;
+                    font-size: 12px;
+                    color: #ffffff;
+                    text-align: center;
+                    border-radius: 50px;
+                    padding-block: 3px;
+                    width: 79px;
+                    height: 25px;
+                }
+
+                .UNASSIGNED {
+                    background-color: #fcba19;
+                    font-size: 12px;
+                    color: #ffffff;
+                    text-align: center;
+                    border-radius: 50px;
+                    padding-block: 3px;
+                    width: 79px;
+                    height: 25px;
+                }
+
+                .RETIRED {
+                    background-color: #dadada;
+                    font-size: 12px;
+                    text-align: center;
+                    border-radius: 50px;
+                    padding-block: 3px;
+                    width: 79px;
+                    height: 25px;
+                    color: $text;
+
+                }
+            }
+
         }
+
     }
+
 
     .filters {
         width: 1224px;
-        height: 106px;
+        min-height: 106px;
         border-radius: 5px;
         border: 1px solid #f8f9fa;
         margin: 30px 32px;
@@ -149,5 +213,187 @@
             float: right;
         }
 
+    }
+}
+
+.addEventDialog, .changeStatusDialog {
+    .MuiDialog-paper {
+        width: 1300px;
+        height: 705px;
+        background-color: #f2f2f2;
+
+        .dialogBtn {
+            position: absolute;
+            right: 8px;
+            top: 8px;
+        }
+
+        .MuiDialogTitle-root {
+            padding: 30px 38px 12px;
+            font-size: 18px;
+        }
+
+        .cardHead {
+            margin: 0 auto;
+            margin-top: 9px;
+            width: 1227px;
+            height: 114px;
+            display: flex;
+            align-items: center;
+            border-radius: 4px;
+            box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+
+            .cardSubtitle {
+                width: 200px;
+                margin-inline: 60px;
+                flex-shrink: 0;
+
+                .MuiTypography-root:nth-child(1) {
+                    font-size: 18px;
+                }
+
+                .MuiTypography-root:nth-child(2) {
+                    font-size: 13px;
+                    color: #ffffff;
+                }
+
+                ///Status Signal
+                .ASSIGNED {
+                    background-color: #4caf50;
+                    width: 90px;
+                    text-align: center;
+                    height: 25px;
+                    border-radius: 50px;
+                }
+
+                .UNASSIGNED {
+                    background-color: #fcba19;
+                    width: 90px;
+                    text-align: center;
+                    height: 25px;
+                    border-radius: 50px;
+                }
+
+                .RETIRED {
+                    background-color: #868e96;
+                    width: 90px;
+                    text-align: center;
+                    height: 25px;
+                    border-radius: 50px;
+                }
+            }
+
+            .MuiTypography-body1 {
+                color: $text;
+            }
+
+            .MuiTypography-body2 {
+                color: $body2;
+            }
+
+            .info {
+                display: flex;
+                align-items: center;
+
+                span {
+                    width: 166px;
+                }
+
+                span:nth-child(1) {
+                    margin-right: 82px;
+                }
+
+                span:nth-child(2) {
+                    margin-right: 125px;
+                }
+
+                span:nth-child(3) {
+                    margin-right: 137px;
+                }
+
+            }
+
+        }
+
+        .cardBody {
+            margin: 0 auto;
+            width: 1227px;
+            min-height: 460px;
+            display: flex;
+            flex-direction: column;
+
+            .newEventRadios {
+                margin: 40px 65px 20px;
+
+                label {
+                    margin-right: 50px;
+                }
+            }
+
+            .history {
+                width: 1097px;
+                height: 166px;
+                margin: 0 auto;
+                flex-basis: content;
+            }
+
+            .moreDetailsBtn {
+                width: 158px;
+                height: 32px;
+                font-size: 14px;
+                text-transform: capitalize;
+                margin: 15px 0 0 65px;
+            }
+
+            .changeStatus{
+                margin: 24px 0 28px 65px;
+                width: 529px;
+            }
+            .reason{
+                width: 1097px;
+                height: 104px;
+                margin: 0 0 0 65px;
+            }
+
+            .updateBtn {
+                // position: relative;
+                // top: 64px;
+                // left: 895px;
+                margin: 48px 0 0 895px;
+
+                button {
+                    width: 130px;
+                    height: 36px;
+                    text-transform: capitalize;
+                    font-size: 14px;
+                }
+
+                button:nth-child(2) {
+                    margin-left: 8px;
+                }
+            }
+        }
+    }
+}
+
+.moreActionsMenu {
+    .MuiMenu-paper {
+        width: 171px;
+        height: 136px;
+        padding: 13px;
+
+        ul {
+            li {
+                border: 1px solid #1a5a96;
+                border-radius: 6px;
+                font-size: 12px;
+                padding-inline: 22px;
+                width: 120px;
+                height: 23px;
+                left: 12px;
+                color: #1a5a96;
+                margin-bottom: 14px;
+            }
+        }
     }
 }
