--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -15,7 +15,7 @@
 	}
 
 	td {
-		font-size: 16px;
+		font-size: 14px;
 		padding: 0 0 1.43rem;
 		color: $text;
 	}
@@ -40,7 +40,7 @@
 			.MuiTypography-root {
 
 				padding-top: 25px;
-				color: #666666;
+				color: $text;
 				font-size: 20px;
 				font-family: 'BCSans-Bold';
 				text-align: center;
@@ -65,6 +65,7 @@
 
 				.name {
 					font-size: 16px;
+					color: $text;
 				}
 
 				.role {
@@ -84,6 +85,7 @@
 
 				.infoText {
 					font-size: 13px;
+					color: $text;
 				}
 
 			}
@@ -107,6 +109,7 @@
 				.quickAccessText {
 					margin-bottom: 10px;
 					font-size: 16px;
+					color: $text;
 				}
 
 				.actions {
@@ -160,14 +163,14 @@
 			.MuiCardHeader-title {
 				font-family: 'BCSans-Bold';
 				padding-top: 10px;
-				color: #666666;
+				color: $text;
 				font-size: 20px;
 			}
 
 			.MuiCardHeader-subheader {
-				padding-top: 20px;
+				padding-top: 10px;
 				font-size: 16px;
-				color: #313132;
+				color: #787f81;
 			}
 
 		}
@@ -222,7 +225,7 @@
 		tr {
 			td:nth-child(2) {
 				text-align: right;
-				padding-left: 40px;
+				padding-left: 100px;
 			}
 		}
 	}
@@ -239,7 +242,7 @@
 
 		tr {
 			td:nth-child(1) {
-				text-align: right;
+				text-align: left;
 				color: #FCBA19;
 			}
 
