--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -86,6 +86,7 @@
 				.infoText {
 					font-size: 13px;
 					color: $text;
+					padding-top: 3px;
 				}
 
 			}
@@ -458,61 +459,67 @@
 	}
 }
 
-.success_dialog {
-	.MuiPaper-root {
+.set_reminder_dialog {
+	.MuiDialog-paper {
+		width: 732px;
+		height: 327px;
 		overflow-y: inherit;
-		width: 504px;
-		height: 230px;
-		border-radius: 10px;
 	}
 
-	.checkIcon {
+	.icon_container {
 		margin: auto;
-		width: 78px;
-		height: 78px;
+		width: 110px;
+		height: 110px;
 		border-radius: 999rem;
-		background-color: #3ADB76;
+		background: rgba(223, 240, 216, 0.83);
 		position: relative;
-		top: -35px;
-
-		svg {
-			position: relative;
-			top: 17px;
-			left: 17px;
-			font-size: 45px;
-			color: #ffffff;
-		}
+		top: -55px;
 	}
 
-	.dialogCloseBtn {
-		position: absolute;
-		right: 8px;
-		top: 8px;
+	.CheckIcon {
+		position: relative;
+		color: #2d4821;
+		font-size: 40px;
+		top: 35px;
+		left: 35px;
+	}
+
+	.MuiDialogTitle-root {
+		margin: 0 auto;
+		padding: 0;
+		font-size: 20px;
+		font-family: 'BCSans-Bold';
+		color: #000000;
+		position: relative;
+		top: -25px;
 	}
 
 	.MuiDialogContent-root {
 		margin: auto;
 		padding: 0 24px;
 		text-align: center;
+		color: #787f81;
+		font-size: 16px;
+		margin-inline: auto;
+		width: 560px;
+	}
 
-		p {
-			color: #666666;
-			font-size: 16px;
-			margin: 5px 0;
-		}
+	.MuiDivider-root {
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	.MuiDialogActions-root {
-		margin: auto;
-		margin-bottom: 20px;
+		padding: 24px 24px 24px 0;
 
-		.okBtn {
-			width: 110px;
-			height: 45px;
-			font-size: 16px;
-			border-radius: 6px;
-			background-color: #3ADB76;
-			color: #ffffff;
+		.closeBtn {
+			width: 94px;
+			height: 36px;
+			font-size: 14px;
+			text-transform: capitalize;
+			font-family: 'BCSans-Bold';
+			background-color: #e9e9e9;
+			color: $text;
 		}
 	}
 }
@@ -531,74 +538,121 @@ button[class*="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-siz
 }
 
 //Lock Modal
-.lock_modal_dialog {
-	.MuiDialog-container {
-		.MuiDialog-paper {
-			width: 505px;
-			height: 305px;
-			border-radius: 10px;
-			overflow-y: inherit;
+.lock_modal_dialog,
+.notification_dialog {
 
-			.dialogBtn {
-				position: absolute;
-				right: 8px;
-				top: 8px;
-			}
+	.MuiDialog-paper {
+		width: 732px;
+		height: 327px;
+		overflow-y: inherit;
 
+		.dialogBtn {
+			position: absolute;
+			right: 8px;
+			top: 8px;
 		}
+
+
 	}
+
 	.lock_icon_container {
 		margin: auto;
-		width: 78px;
-		height: 78px;
+		width: 110px;
+		height: 110px;
 		border-radius: 999rem;
-		background-color: #ffae00;
+		background: rgba(255, 174, 0, 0.68);
 		position: relative;
-		top: -30px;
+		top: -60px;
+	}
+
+	.notification_icon_container {
+		margin: auto;
+		width: 110px;
+		height: 110px;
+		border-radius: 999rem;
+		background: rgba(111, 177, 239, 0.68);
+		position: relative;
+		top: -60px;
 	}
 
 	.LockIcon {
 		position: relative;
 		color: #ffffff;
 		font-size: 50px;
-		top: 14px;
-		left: 14px;
+		top: 30px;
+		left: 30px;
 	}
 
-	.dialog_content {
+	.NotificationIcon {
+		position: relative;
+		color: #1a5a96;
+		font-size: 50px;
+		top: 30px;
+		left: 30px;
+	}
+
+	.MuiDialogTitle-root {
+		margin: 0 auto;
+		padding: 0;
+		font-size: 20px;
+		font-family: 'BCSans-Bold';
+		color: #000000;
+		position: relative;
+		top: -25px;
+	}
+
+	.MuiDialogContent-root {
 		margin: auto;
 		padding: 0 24px;
-		text-align: left;
+		text-align: center;
+		color: #787f81;
+		font-size: 16px;
+		margin-inline: auto;
+		width: 610px;
 
-		p {
-			color: $text;
-			font-size: 14px;
-			margin: 20px;
+		.MuiFormGroup-row {
+			margin-top: 10px;
+
+			.MuiFormControlLabel-label {
+				color: #c0c0c0;
+			}
 		}
 	}
 
-	.dialog_actions {
-		margin: auto;
-		margin-bottom: 25px;
+	.MuiDivider-root {
+		margin-left: 0;
+		margin-right: 0;
+	}
 
-		.lock_btn {
-			width: 110px;
-			height: 42px;
-			border-radius: 6px;
-			margin-right: 10px;
-			background-color: #ffae00;
-			font-size: 16px;
-			color: #ffffff;
+	.MuiDialogActions-root {
+		padding: 24px 24px 24px 0;
+
+		.dialog_actions {
+			width: 94px;
+			height: 36px;
+			font-size: 14px;
+			text-transform: capitalize;
+			font-family: 'BCSans-Bold';
 		}
 
 		.MuiButton-root:nth-child(2) {
-			width: 110px;
-			height: 42px;
-			border-radius: 6px;
-			font-size: 16px;
-			border: 1px solid #868e96;
-			color: #666666;
-			text-transform: capitalize;
+			background-color: #e9e9e9;
+			color: $text;
+			margin-left: 12px;
 		}
+
+		.closeBtn {
+			width: 94px;
+			height: 36px;
+			font-size: 14px;
+			text-transform: capitalize;
+			font-family: 'BCSans-Bold';
+			background-color: #e9e9e9;
+			color: $text;
+		}
+	}
+
+	.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+		max-width: 732px;
 	}
 }
