--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -39,7 +39,7 @@
     .expandButtons {
         display: flex;
         justify-content: flex-end;
-        margin: 70px 8px 0 0;
+        margin-top: 70px;
 
         .expand_btn {
             width: 108px;
@@ -91,41 +91,60 @@
 .addEventConfirm,
 .deleteConfirm {
     .MuiDialog-paper {
-        width: 615px;
-        height: 279px;
+        width: 732px;
+        height: 327px;
 
+        //close icon btn
         .dialogBtn {
             position: absolute;
             right: 8px;
             top: 8px;
         }
 
-        .MuiTypography-root {
+        .MuiDialogTitle-root {
             font-size: 18px;
             font-family: 'BCSans-Bold';
-            padding: 47px 0 35px 39px;
+            color: #000000;
+            padding: 48px 0 20px 24px;
         }
 
         .MuiDialogContent-root {
-            padding: 0 39px;
+            padding: 0 24px;
             font-size: 16px;
+            color: #787f81;
+
+            .MuiTypography-root {
+                font-size: 16px;
+                font-family: 'BCSans-Bold';
+                color: #787f81;
+                padding-top: 20px;
+            }
+        }
+
+        .MuiDivider-root {
+            margin-left: 0;
+            margin-right: 0;
         }
 
         .MuiDialogActions-root {
-            padding: 0 32px 48px 0;
+            padding: 24px 24px 24px 0;
 
             .requesterFormBtn {
-                width: 106px;
-                height: 34px;
+                width: 94px;
+                height: 36px;
                 font-size: 14px;
                 text-transform: capitalize;
+                font-family: 'BCSans-Bold';
             }
 
             .MuiButton-root:nth-child(1) {
-                background-color: #d8292f;
+                background-color: #a12622;
+                color: #ffffff;
             }
 
             .MuiButton-root:nth-child(2) {
+                background-color: #e9e9e9;
+                color: $text;
                 margin-left: 12px;
             }
         }
@@ -236,10 +255,153 @@
 
 }
 
-// .card .MuiPaper-root {
-//     border-radius: 4px;
-//     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-// }
+.details_status_card {
+    margin: 0 auto;
+    margin-block: 9px 18px;
+    width: 1344px;
+    height: 158px;
+    display: flex;
+    align-items: center;
+    padding-left: 78px;
+    padding-right: 40px;
+
+    .idInformationCard {
+        display: flex;
+        flex-direction: column;
+
+        .info {
+            display: flex;
+            align-items: center;
+
+            span:nth-child(1) {
+                margin-right: 217px;
+
+                .MuiTypography-root:nth-child(2) {
+                    color: #ffffff;
+                    font-size: 13px;
+                }
+            }
+
+            span:nth-child(2) {
+                margin-right: 180px;
+            }
+
+            span:nth-child(3) {
+                margin-right: 184px;
+            }
+        }
+    }
+
+    .title {
+        font-family: 'BCSans-Bold';
+        font-size: 18px;
+        margin-bottom: 15px;
+    }
+
+    .MuiTypography-body1 {
+        color: $text;
+    }
+
+    .MuiTypography-body2 {
+        color: $body2;
+    }
+}
+
+.multiple_card {
+    margin: 0 auto;
+    margin-top: 9px;
+    width: 1296px;
+    height: 152px;
+    display: flex;
+    align-items: center;
+    padding-left: 58px;
+    padding-right: 40px;
+    position: relative;
+    z-index: 5 !important;
+    border-left: 8px solid #1a5a96;
+
+
+    .idInformationCard {
+        display: flex;
+        flex-direction: column;
+
+        .info {
+            span:nth-child(1) {
+                margin-right: 82px;
+
+                .MuiTypography-root:nth-child(2) {
+                    color: #ffffff;
+                    font-size: 13px;
+                }
+            }
+        }
+    }
+
+    .title {
+        font-family: 'BCSans-Bold';
+        font-size: 18px;
+        margin-bottom: 15px;
+    }
+
+    .MuiTypography-body1 {
+        color: $text;
+    }
+
+    .MuiTypography-body2 {
+        color: $body2;
+    }
+
+    span:nth-child(1) {
+        width: 200px;
+        margin-right: 105px;
+        flex-shrink: 0;
+    }
+
+    .cardSubtitle {
+        .MuiTypography-root:nth-child(1) {
+            font-size: 18px;
+        }
+
+        .MuiTypography-root:nth-child(2) {
+            font-size: 13px;
+            color: #ffffff;
+        }
+    }
+
+    .info {
+        display: flex;
+        align-items: center;
+
+        span {
+            width: 166px;
+        }
+
+        span:nth-child(1) {
+            margin-right: 82px;
+        }
+
+        span:nth-child(2) {
+            margin-right: 125px;
+        }
+
+        span:nth-child(3) {
+            margin-right: 137px;
+        }
+
+        span:nth-child(4) {
+            width: 197px;
+        }
+    }
+
+    .expand_icon {
+        svg {
+            font-size: 40px;
+            color: #1a5a96;
+        }
+    }
+
+
+}
 
 .card {
     margin: 0 auto;
@@ -250,7 +412,8 @@
     align-items: center;
     padding-left: 58px;
     padding-right: 40px;
-
+    position: relative;
+    z-index: 5 !important;
 
     .idInformationCard {
         display: flex;
@@ -338,9 +501,14 @@
     display: flex;
     flex-direction: column;
 
+    p,
+    .MuiTableCell-root {
+        color: $text;
+    }
+
     .cardDetails {
         width: 1091px;
-        margin: 10px auto;
+        margin: 10px auto 30px auto;
 
         //for pri and sec purpose
         .priPurpose {
@@ -398,7 +566,7 @@
         .detailsSubtitle {
             font-family: 'BCSans-Bold';
             font-size: 18px;
-            margin-block: 32px 10px;
+            margin-block: 32px 16px;
         }
 
         //left column
@@ -576,6 +744,15 @@
             }
         }
 
+        //details page table
+
+        .tableHead {
+            background-color: #f8f9fa;
+
+            .table_location {
+                width: 470px;
+            }
+        }
 
     }
 
@@ -593,6 +770,39 @@
         }
     }
 
+    //multiple IDs update page
+    .MuiDataGrid-columnHeader {
+        background-color: #f8f9fa;
+    }
+
+    .MuiDataGrid-iconSeparator {
+        display: none;
+    }
+
+    // .MuiDataGrid-cell--withRenderer {
+    //     .MuiInputBase-root {
+    //         height: 40px;
+    //         width: 80%;
+    //     }
+    // }
+
+    .MuiDataGrid-root {
+        border: none;
+        color: $text;
+    }
+
+    .MuiDataGrid-root .MuiDataGrid-columnHeader,
+    .MuiDataGrid-root .MuiDataGrid-cell {
+        outline: none !important;
+    }
+
+    .id_cell {
+        color: #1a5a96;
+    }
+    .sex_cell, .region_cell{
+        color: #787f81;
+    }
+
 }
 
 //HidableDetails
@@ -603,6 +813,16 @@
         font-family: 'BCSans-Bold';
         font-size: 18px;
         margin-bottom: 19px;
+    }
+
+    .MuiTypography-body2 {
+        color: $body2;
+    }
+
+    .history_content,
+    .project_details_content {
+        color: $text;
+        margin-top: 5px;
     }
 
     .tableHead {
@@ -623,6 +843,8 @@
     position: relative;
     top: 7px;
 }
+
+//details page
 
 .paper {
     margin: 32px auto;
@@ -714,6 +936,15 @@
 
 .RETIRED {
     background-color: #868e96;
+    width: 90px;
+    text-align: center;
+    height: 25px;
+    border-radius: 50px;
+}
+
+//Multiple status signal
+.MULTIPLE {
+    background-color: #d8292f;
     width: 90px;
     text-align: center;
     height: 25px;
