--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -120,7 +120,7 @@
 
 					p {
 						font-size: 10px;
-						margin: 0;
+						margin: 0 0 0 10px;
 						opacity: 0;
 						position: absolute;
 					}
@@ -265,6 +265,7 @@
 	margin-right: 15px;
 	border-radius: 15px;
 	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+	color: $text;
 
 	svg,
 	a {
@@ -286,7 +287,6 @@
 		.MuiTypography-root {
 
 			padding-top: 25px;
-			color: #666666;
 			font-size: 20px;
 			font-family: 'BCSans-Bold';
 			text-align: center;
@@ -297,6 +297,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		color: $text;
 
 		.userIcon {
 			font-size: 200px;
@@ -330,6 +331,7 @@
 
 			.infoText {
 				font-size: 13px;
+				padding-top: 3px;
 			}
 
 		}
@@ -362,7 +364,7 @@
 
 				p {
 					font-size: 10px;
-					margin: 0;
+					margin: 0 0 0 10px;
 					opacity: 0;
 					position: absolute;
 				}
@@ -400,6 +402,7 @@
 	width: 1050px;
 	border-radius: 15px;
 	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+	color: #313132;
 
 	.MuiCardHeader-root {
 		padding: 30px 0 10px 50px;
@@ -407,14 +410,13 @@
 		.MuiCardHeader-title {
 			font-family: 'BCSans-Bold';
 			padding-top: 10px;
-			color: #666666;
 			font-size: 20px;
 		}
 
 		.MuiCardHeader-subheader {
 			padding-top: 20px;
 			font-size: 16px;
-			color: #313132;
+			color: #787f81;
 		}
 	}
 
