update ui - single id edit page

--- a/src/main/styles/search.scss
+++ b/src/main/styles/search.scss
@@ -24,7 +24,6 @@
             height: 41px;
             text-transform: capitalize;
             font-size: 14px;
-            margin-right: 8px;
         }
     }
 
@@ -39,6 +38,11 @@
 
         .rightColumn {
             width: 567px;
+            margin-top: 32px;
+        }
+
+        .species{
+            width: 1166;
             margin-top: 32px;
         }
 
