--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -1,5 +1,13 @@
 @import 'colours';
 
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
+}
+
 .container {
 
     .pageHead {
@@ -39,7 +47,7 @@
     .expandButtons {
         display: flex;
         justify-content: flex-end;
-        margin-top: 70px;
+        margin-top: 50px;
 
         .expand_btn {
             width: 108px;
@@ -59,16 +67,8 @@
         }
     }
 
-    //title card
-    // .css-bhp9pd-MuiPaper-root-MuiCard-root {
-    // border-radius: 4px;
-    // box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    // }
 
-    //for personnel table
-    .tableActionIcon {
-        margin-right: 10px;
-    }
+
 
     .personnelTable {
         table-layout: auto;
@@ -83,6 +83,27 @@
 
         .phone {
             white-space: nowrap;
+        }
+    }
+
+    .error_message {
+        font-size: 14px;
+        color: #d32f2f;
+    }
+}
+
+//for personnel table menu
+.MuiMenu-root {
+    .MuiMenu-paper {
+        .MuiMenu-list {
+            .personnelTableMenu {
+                width: 220px;
+
+                svg {
+                    margin-right: 20px;
+                    color: #003366;
+                }
+            }
         }
     }
 }
@@ -139,6 +160,109 @@
 
             .MuiButton-root:nth-child(1) {
                 background-color: #a12622;
+                color: #ffffff;
+            }
+
+            .MuiButton-root:nth-child(2) {
+                background-color: #e9e9e9;
+                color: $text;
+                margin-left: 12px;
+            }
+        }
+
+    }
+
+}
+
+//New Event Form dialog
+.newEventFormDialog {
+    .MuiDialog-paper {
+        width: 1090px;
+        height: 825px;
+
+        .MuiDialogTitle-root {
+            font-size: 18px;
+            font-family: 'BCSans-Bold';
+            color: #000000;
+            padding: 48px 0 20px 70px;
+        }
+
+        .MuiDialogContent-root {
+            padding: 0 70px;
+            font-size: 16px;
+            color: $text;
+
+            .eventRadios {
+                margin-block: 10px 24px;
+            }
+
+            .leftColumn,
+            .rightColumn {
+                width: 459px;
+            }
+
+            .rightColumn {
+                margin-left: 32px;
+            }
+
+            .detailsSubtitle {
+                font-family: 'BCSans-Bold';
+                font-size: 18px;
+                margin-block: 24px;
+            }
+
+            .MuiButton-root {
+                font-size: 14px;
+                text-transform: capitalize;
+                width: 175px;
+            }
+
+            .temp_button {
+                display: flex;
+                flex-direction: column;
+
+                .MuiButton-root:nth-child(1) {
+                    margin-bottom: 12px;
+                }
+            }
+
+            .samplesContainer {
+                width: 400px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: baseline;
+                color: #868e96;
+
+                .MuiFormControlLabel-root {
+                    color: #666666;
+
+                }
+            }
+
+            .history {
+                width: 950px;
+                margin-block: 24px;
+            }
+        }
+
+        .MuiDivider-root {
+            margin-left: 0;
+            margin-right: 0;
+        }
+
+        .MuiDialogActions-root {
+            padding: 24px 70px 24px 0;
+
+            .dialogButtons {
+                width: 94px;
+                height: 36px;
+                font-size: 14px;
+                text-transform: capitalize;
+                font-family: 'BCSans-Bold';
+            }
+
+            .MuiButton-root:nth-child(1) {
                 color: #ffffff;
             }
 
@@ -405,11 +529,14 @@
 
 .card {
     margin: 0 auto;
-    margin-top: 9px;
+    // margin-top: 9px;
+    margin-top: 12px;
     width: 1296px;
-    height: 152px;
+    // height: 152px;
+    height: 120px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding-left: 58px;
     padding-right: 40px;
     position: relative;
@@ -421,7 +548,7 @@
 
         .info {
             span:nth-child(1) {
-                margin-right: 82px;
+                // margin-right: 82px;
 
                 .MuiTypography-root:nth-child(2) {
                     color: #ffffff;
@@ -445,13 +572,15 @@
         color: $body2;
     }
 
-    span:nth-child(1) {
-        width: 200px;
-        margin-right: 105px;
-        flex-shrink: 0;
-    }
+    // span:nth-child(1) {
+    //     width: 200px;
+    //     margin-right: 105px;
+    //     flex-shrink: 0;
+    // }
 
     .cardSubtitle {
+        width: 128px;
+
         .MuiTypography-root:nth-child(1) {
             font-size: 18px;
         }
@@ -465,26 +594,28 @@
     .info {
         display: flex;
         align-items: center;
+        width: 710px;
+        justify-content: space-between;
 
         span {
             width: 166px;
         }
 
-        span:nth-child(1) {
-            margin-right: 82px;
-        }
+        // span:nth-child(1) {
+        //     margin-right: 82px;
+        // }
 
-        span:nth-child(2) {
-            margin-right: 125px;
-        }
+        // span:nth-child(2) {
+        //     margin-right: 125px;
+        // }
 
-        span:nth-child(3) {
-            margin-right: 137px;
-        }
+        // span:nth-child(3) {
+        //     margin-right: 137px;
+        // }
 
-        span:nth-child(4) {
-            width: 197px;
-        }
+        // span:nth-child(4) {
+        //     width: 197px;
+        // }
     }
 
     .expand_icon {
@@ -523,10 +654,21 @@
         }
 
         //for Edit Status
-        .changeStatus,
-        .correctIdNumber {
+        .changeStatus {
             width: 529px;
             margin-top: 32px;
+        }
+
+        .correctIdNumber {
+            width: 460px;
+            margin-left: 245px;
+        }
+
+        .retiredSection {
+            display: flex;
+            flex-direction: row;
+            // justify-content: space-between;
+            align-items: flex-end;
         }
 
         .reason,
@@ -536,6 +678,10 @@
         .history {
             min-width: 1091px;
             margin-top: 32px;
+
+            #history-helper-text {
+                color: #2E8540;
+            }
         }
 
         .retiredSwitches {
@@ -598,6 +744,7 @@
         }
 
         .addIdentifier {
+            width: 176px;
             height: 32px;
             margin-top: 32px;
             font-size: 14px;
@@ -605,6 +752,7 @@
         }
 
         .copyFromRequester {
+            width: 176px;
             height: 32px;
             margin-top: 6px;
             font-size: 14px;
@@ -613,8 +761,9 @@
 
         .addSubmitter,
         .addLocation {
+            width: 176px;
             height: 32px;
-            margin-top: 14px;
+            margin-top: 24px;
             font-size: 14px;
             text-transform: capitalize;
         }
@@ -651,7 +800,7 @@
                     .oneColumnContainer {
                         width: 569px;
                         display: flex;
-                        align-items: center;
+                        align-items: baseline;
                         margin-top: 32px;
 
                         .MuiTextField-root {
@@ -663,15 +812,15 @@
                     .twoColumnContainer {
                         width: 569px;
                         display: flex;
-                        align-items: center;
+                        align-items: baseline;
                         margin-top: 32px;
 
-                        .MuiTextField-root:nth-child(1) {
+                        .firstColumn {
                             width: 256px;
                             margin-right: 16px;
                         }
 
-                        .MuiTextField-root:nth-child(2) {
+                        .secondColumn {
                             width: 256px;
                         }
 
@@ -680,17 +829,15 @@
                     .threeColumnContainer {
                         width: 569px;
                         display: flex;
-                        align-items: center;
+                        align-items: baseline;
                         margin-top: 32px;
 
-                        .MuiTextField-root:nth-child(1),
-                        .MuiTextField-root:nth-child(2) {
+                        .MuiTextField-root {
                             width: 165px;
-                            margin-right: 16px;
                         }
 
-                        .MuiTextField-root:nth-child(3) {
-                            width: 165px;
+                        .leftColumns {
+                            margin-right: 16px;
                         }
 
                     }
@@ -698,7 +845,7 @@
                     .earTag {
                         width: 569px;
                         display: flex;
-                        align-items: center;
+                        align-items: flex-start;
                         margin-top: 32px;
 
                         .MuiTextField-root:nth-child(1),
@@ -799,7 +946,9 @@
     .id_cell {
         color: #1a5a96;
     }
-    .sex_cell, .region_cell{
+
+    .sex_cell,
+    .region_cell {
         color: #787f81;
     }
 
