--- a/src/main/styles/confirmationDialog.scss
+++ b/src/main/styles/confirmationDialog.scss
@@ -94,7 +94,7 @@
 		width: 110px;
 		height: 110px;
 		border-radius: 999rem;
-		background: rgba(	223, 240, 216, 0.83);
+		background: rgba(223, 240, 216, 0.83);
 		position: relative;
 		top: -55px;
 	}
@@ -106,6 +106,7 @@
 		top: 30px;
 		left: 30px;
 	}
+
 	.CheckIcon {
 		position: relative;
 		color: #2d4821;
@@ -148,7 +149,7 @@
 			text-transform: capitalize;
 			font-family: 'BCSans-Bold';
 
-			span{
+			span {
 				text-transform: lowercase;
 			}
 		}
@@ -159,14 +160,14 @@
 			margin-left: 12px;
 		}
 
-		.cancelBtns{
+		.cancelBtns {
 			width: 94px;
 		}
 	}
 }
 
 .confirm_dialog {
-    .MuiDialog-paper {
+	.MuiDialog-paper {
 		width: 732px;
 		height: 327px;
 		overflow-y: inherit;
@@ -193,7 +194,7 @@
 		width: 110px;
 		height: 110px;
 		border-radius: 999rem;
-		background: rgba(	223, 240, 216, 0.83);
+		background: rgba(223, 240, 216, 0.83);
 		position: relative;
 		top: -55px;
 	}
@@ -205,6 +206,7 @@
 		top: 30px;
 		left: 30px;
 	}
+
 	.CheckIcon {
 		position: relative;
 		color: #2d4821;
@@ -214,23 +216,23 @@
 	}
 
 	.MuiDialogTitle-root {
-		margin: 0 auto;
-		padding: 0;
-		font-size: 20px;
-		font-family: 'BCSans-Bold';
-		color: #000000;
-		position: relative;
-		top: -25px;
+		font-size: 18px;
+            font-family: 'BCSans-Bold';
+            color: #000000;
+            padding: 48px 0 20px 24px;
 	}
 
 	.MuiDialogContent-root {
-		margin: auto;
-		padding: 0 24px;
-		text-align: center;
+		padding: 24px 24px;
 		color: #787f81;
 		font-size: 16px;
-		margin-inline: auto;
-		width: 560px;
+
+		.MuiTypography-root {
+			font-size: 16px;
+			font-family: 'BCSans-Bold';
+			color: #787f81;
+			padding-top: 20px;
+		}
 	}
 
 	.MuiDivider-root {
@@ -247,7 +249,7 @@
 			text-transform: capitalize;
 			font-family: 'BCSans-Bold';
 
-			span{
+			span {
 				text-transform: lowercase;
 			}
 		}
@@ -258,9 +260,8 @@
 			margin-left: 12px;
 		}
 
-		.cancelBtns{
+		.cancelBtns {
 			width: 94px;
 		}
 	}
 }
-    
