--- a/src/main/styles/search.scss
+++ b/src/main/styles/search.scss
@@ -28,21 +28,29 @@
     }
 
     .paperStyle {
-        width: 1326px;
-        padding-inline: 80px;
+        width: 1360px;
+        padding: 32px 24px;
+        position: absolute;
+        z-index: 1000;
+        overflow: auto;
+
+        .searchBar {
+            display: flex;
+            align-items: center;
+        }
 
         .leftColumn {
-            width: 567px;
+            width: 640px;
             margin: 32px 32px 0 0;
         }
 
         .rightColumn {
-            width: 567px;
+            width: 640px;
             margin-top: 32px;
         }
 
-        .species{
-            width: 1166;
+        .species {
+            width: 1312px;
             margin-top: 32px;
         }
 
@@ -72,9 +80,38 @@
         }
 
         .eventKeywords {
-            width: 1166px;
-            margin-top: 10px;
+            width: 1180px;
         }
+
+        .hideFilterButton:hover {
+            color: $BCgovBlue;
+        }
+
+        .hideFilterButton {
+            width: 122px;
+            height: 42px;
+            text-transform: capitalize;
+            font-size: 14px;
+            margin-left: 7px;
+            color: #adb5bd;
+        }
+
+        .creationPeriodCheckbox {
+            margin-top: 16px;
+        }
+
+        .searchButton {
+            // margin-top: 20px;
+            width: 90px;
+            font-family: 'BCSans-Bold';
+            float: right;
+            text-transform: capitalize;
+        }
+
+        .filterForm {
+            margin-bottom: 20px;
+        }
+
     }
 
     .detailsSubtitle {
@@ -84,13 +121,15 @@
     }
 
     .filter_result {
-        width: 1326px;
-        min-height: 680px;
-        margin-top: 20px;
+        // width: 1326px;
+        // min-height: 680px;
+        // margin-top: 20px;
+        // min-height: 1365px;
+        width: 1360px;
+        margin-top: 135px;
 
         .results_table {
-            margin-inline: 32px;
-            height: 430px;
+            margin: 12px 32px;
 
             .MuiTypography-root {
                 color: $text;
@@ -104,81 +143,102 @@
             }
 
             .MuiDataGrid-columnHeaders {
-                background-color: #ececec;
+                // background-color: #ececec;
+                background-color: #f2f2f2;
+            }
+
+            .resultTableHeader {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .MuiTypography-root {
+                    font-size: 14px;
+                }
+
+                .hiddenButtons {
+                    button {
+                        width: 120px;
+                        height: 23px;
+                        border-radius: 6px;
+                        text-transform: capitalize;
+                        font-size: 12px;
+                        color: $link;
+                        text-align: center;
+                    }
+
+                    button:nth-child(1) {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            .data {
+                border: none;
+            }
+
+
+            .statusDropdown {
+                width: 120px;
+                height: 31px;
+                border-radius: 13px;
+                font-size: 11px;
+                padding-left: 14px;
+            }
+
+            .ASSIGNED {
+                background-color: #4caf50;
+                color: #ffffff;
+            }
+
+            .UNASSIGNED {
+                background-color: #fcba19;
+                color: #ffffff;
+            }
+
+            .RETIRED {
+                background-color: #dadada;
+                color: $text;
             }
 
             .actions {
                 display: contents;
                 align-items: center;
 
-                button:nth-child(1) {
-                    font-size: 12px;
-                    width: 108px;
-                    height: 23px;
-                    text-transform: capitalize;
-                    margin-right: 12px;
+                button {
+                    width: 35px;
+                    height: 35px;
                 }
 
-                button:nth-child(2) {
-                    font-size: 12px;
-                    width: 108px;
-                    height: 23px;
-                    text-transform: capitalize;
-                }
+                // button:nth-child(2) {
+                //     font-size: 12px;
+                //     width: 108px;
+                //     height: 23px;
+                //     text-transform: capitalize;
+                // }
 
 
             }
 
-            .data {
-
-                ///Status Signal
-                .ASSIGNED {
-                    background-color: #4caf50;
-                    font-size: 12px;
-                    color: #ffffff;
-                    text-align: center;
-                    border-radius: 50px;
-                    padding-block: 3px;
-                    width: 79px;
-                    height: 25px;
-                }
-
-                .UNASSIGNED {
-                    background-color: #fcba19;
-                    font-size: 12px;
-                    color: #ffffff;
-                    text-align: center;
-                    border-radius: 50px;
-                    padding-block: 3px;
-                    width: 79px;
-                    height: 25px;
-                }
-
-                .RETIRED {
-                    background-color: #dadada;
-                    font-size: 12px;
-                    text-align: center;
-                    border-radius: 50px;
-                    padding-block: 3px;
-                    width: 79px;
-                    height: 25px;
-                    color: $text;
-
-                }
+            .idFlag {
+                color: #d8292f;
+                margin-left: 5px;
             }
 
+            .idFlagBG {
+                background-color: #FFF5F5;
+            }
         }
 
     }
 
 
     .filters {
-        width: 1224px;
         min-height: 106px;
         border-radius: 5px;
         border: 1px solid #f8f9fa;
         margin: 30px 32px;
-        padding: 13px 0 27px 17px;
+        padding: 13px 17px;
 
         .filters_title {
             font-size: 14px;
@@ -214,17 +274,15 @@
             color: $text;
             text-align: center;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-            float: right;
         }
 
     }
 }
 
-.addEventDialog, .changeStatusDialog {
+.addEventDialog,
+.changeStatusDialog {
     .MuiDialog-paper {
-        width: 1300px;
-        height: 705px;
-        background-color: #f2f2f2;
+        width: 1120px;
 
         .dialogBtn {
             position: absolute;
@@ -235,6 +293,7 @@
         .MuiDialogTitle-root {
             padding: 30px 38px 12px;
             font-size: 18px;
+            font-family: 'BCSans-Bold';
         }
 
         .cardHead {
@@ -320,11 +379,7 @@
         }
 
         .cardBody {
-            margin: 0 auto;
-            width: 1227px;
-            min-height: 460px;
-            display: flex;
-            flex-direction: column;
+            padding: 40px 38px 64px;
 
             .newEventRadios {
                 margin: 40px 65px 20px;
@@ -349,21 +404,23 @@
                 margin: 15px 0 0 65px;
             }
 
-            .changeStatus{
-                margin: 24px 0 28px 65px;
-                width: 529px;
+            .changeStatus {
+                width: 500px;
             }
-            .reason{
-                width: 1097px;
+
+            .changeStatus:nth-child(1) {
+                margin-right: 40px;
+            }
+
+
+            .reason {
+                width: 1040px;
                 height: 104px;
-                margin: 0 0 0 65px;
+                margin-top: 32px;
             }
 
             .updateBtn {
-                // position: relative;
-                // top: 64px;
-                // left: 895px;
-                margin: 48px 0 0 895px;
+                margin: 64px 0 0 773px;
 
                 button {
                     width: 130px;
@@ -376,6 +433,355 @@
                     margin-left: 8px;
                 }
             }
+
+            .retiredSection {
+                display: flex;
+                flex-direction: row;
+                align-items: flex-end;
+
+                .retiredSwitches {
+                    width: 330px;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: baseline;
+
+
+                    .switch {
+                        margin-inline: 20px;
+                    }
+                }
+
+                .switchLabels,
+                .eventRadios {
+                    margin-top: 32px;
+                    color: #666666;
+                }
+            }
+        }
+
+        .cardDetails {
+            width: 1035px;
+            margin: 10px auto 0 auto;
+
+
+            //for Edit Status
+            .changeStatus {
+                width: 529px;
+                margin-top: 32px;
+            }
+
+            .correctIdNumber {
+                width: 460px;
+                margin-left: 245px;
+            }
+
+            .retiredSection {
+                display: flex;
+                flex-direction: row;
+                // justify-content: space-between;
+                align-items: flex-end;
+            }
+
+            .reason,
+            .project,
+            .projectDetails,
+            .species,
+            .history {
+                min-width: 1039px;
+                margin-top: 32px;
+
+                #history-helper-text {
+                    color: #2E8540;
+                }
+            }
+
+            .retiredSwitches {
+                width: 330px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: baseline;
+
+
+                .switch {
+                    margin-inline: 20px;
+                }
+            }
+
+            .switchLabels,
+            .eventRadios {
+                margin-top: 32px;
+                color: #666666;
+            }
+
+            //status history
+            .historyTable {
+                margin-bottom: 36px;
+            }
+
+            //for edit purpose
+            .detailsSubtitle {
+                font-family: 'BCSans-Bold';
+                font-size: 18px;
+                margin-block: 32px 16px;
+            }
+
+            //left column
+            .leftColumn {
+                width: 500px;
+                margin-top: 32px;
+            }
+
+            //right column
+            .rightColumn {
+                width: 500px;
+                margin-left: 32px;
+                margin-top: 32px;
+            }
+
+            .addRequester {
+                width: 128px;
+                height: 32px;
+                margin-top: 7px;
+                font-size: 14px;
+                padding: 0;
+                text-transform: capitalize;
+            }
+
+            .submitterContainer {
+                display: flex;
+                flex-direction: row;
+                align-items: baseline;
+            }
+
+            .addIdentifier {
+                width: 176px;
+                height: 32px;
+                margin-top: 32px;
+                font-size: 14px;
+                text-transform: capitalize;
+            }
+
+            .copyFromRequester {
+                width: 150px;
+                height: 32px;
+                margin-top: 6px;
+                font-size: 14px;
+                text-transform: capitalize;
+            }
+
+            .addSubmitter,
+            .addLocation {
+                width: 175px;
+                height: 32px;
+                margin-top: 24px;
+                font-size: 14px;
+                text-transform: capitalize;
+            }
+
+            .temp_button {
+                display: flex;
+                flex-direction: column;
+
+                .MuiButton-root {
+                    width: 175px;
+                    font-size: 14px;
+                    text-transform: capitalize;
+                }
+
+                .MuiButton-root:nth-child(2) {
+                    margin-top: 12px;
+                }
+            }
+
+            //for event details
+            //location container
+            .locations,
+            .identifier {
+
+                .locationEntry,
+                .identifierEntry {
+                    display: flex;
+                    flex-direction: column;
+
+                    .locationsContainer,
+                    .identifierContainer {
+                        width: 1140px;
+                        margin: 0 auto;
+                        display: flex;
+                        flex-direction: row;
+
+                        .locationSelect,
+                        .identifierSelect {
+                            width: 529px;
+                            margin-right: 32px;
+                            margin-top: 32px;
+                        }
+
+                        svg {
+                            font-size: 20px;
+                            margin-left: 4px;
+                        }
+
+                        .oneColumnContainer {
+                            width: 569px;
+                            display: flex;
+                            align-items: baseline;
+                            margin-top: 32px;
+
+                            .MuiTextField-root {
+                                width: 529px;
+                            }
+
+                        }
+
+                        .twoColumnContainer {
+                            width: 569px;
+                            display: flex;
+                            align-items: baseline;
+                            margin-top: 32px;
+
+                            .firstColumn {
+                                width: 256px;
+                                margin-right: 16px;
+                            }
+
+                            .secondColumn {
+                                width: 256px;
+                            }
+
+                        }
+
+                        .threeColumnContainer {
+                            width: 569px;
+                            display: flex;
+                            align-items: baseline;
+                            margin-top: 32px;
+
+                            .MuiTextField-root {
+                                width: 165px;
+                            }
+
+                            .leftColumns {
+                                margin-right: 16px;
+                            }
+
+                        }
+
+                        .earTag {
+                            width: 569px;
+                            display: flex;
+                            align-items: flex-start;
+                            margin-top: 32px;
+
+                            .MuiTextField-root:nth-child(1),
+                            .MuiTextField-root:nth-child(2) {
+                                width: 210px;
+                                margin-right: 16px;
+                            }
+
+                            .MuiFormGroup-root:nth-child(3) {
+                                width: 80px;
+                            }
+
+                            .MuiRadio-root {
+                                padding: 0;
+                            }
+
+                            .MuiTypography-root {
+                                margin: 0;
+                            }
+                        }
+                    }
+
+                }
+
+            }
+
+            // edit event sample
+            .samplesContainer {
+                width: 400px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: baseline;
+
+                .MuiTypography-body1 {
+                    color: $body2;
+                }
+
+                .sampleLabel {
+                    .MuiTypography-body1 {
+                        color: #666666;
+                    }
+                }
+            }
+
+            //details page table
+
+            .tableHead {
+                background-color: #f8f9fa;
+
+                .table_location {
+                    width: 470px;
+                }
+            }
+
+        }
+
+        .dialogActions {
+            float: right;
+            padding: 66px 0 30px 0;
+
+            .dialogButtons {
+                width: 131px;
+                height: 36px;
+                font-size: 14px;
+                text-transform: capitalize;
+                font-family: 'BCSans-Bold';
+            }
+
+            .dialogButtons:nth-child(2) {
+                margin-left: 8px;
+            }
+
+        }
+    }
+}
+
+.statusMenu {
+    .MuiMenu-paper {
+        width: 120px;
+
+        .ASSIGNED {
+            width: 100px;
+            height: 31px;
+            margin: 0 auto 16px;
+            border-radius: 13px;
+            font-size: 11px;
+            color: #ffffff;
+            background-color: #4caf50;
+        }
+
+        .UNASSIGNED {
+            background-color: #fcba19;
+            width: 100px;
+            height: 31px;
+            margin: 0 auto 16px;
+            border-radius: 13px;
+            font-size: 11px;
+            color: #ffffff;
+        }
+
+        .RETIRED {
+            background-color: #dadada;
+            color: $text;
+            width: 100px;
+            height: 31px;
+            margin: 0 auto;
+            border-radius: 13px;
+            font-size: 11px;
         }
     }
 }
@@ -383,7 +789,7 @@
 .moreActionsMenu {
     .MuiMenu-paper {
         width: 171px;
-        height: 136px;
+        height: 99px;
         padding: 13px;
 
         ul {
@@ -391,12 +797,10 @@
                 border: 1px solid #1a5a96;
                 border-radius: 6px;
                 font-size: 12px;
-                padding-inline: 22px;
                 width: 120px;
                 height: 23px;
-                left: 12px;
                 color: #1a5a96;
-                margin-bottom: 14px;
+                margin: 0 auto 12px;
             }
         }
     }
