--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -15,16 +15,25 @@
         justify-content: space-between;
         align-items: center;
 
-        .mainTitle {
+        .headerTitle {
+
             .MuiTypography-root:nth-child(1) {
                 font-size: 32px;
                 font-family: 'BCSans-Bold';
             }
 
-            .MuiTypography-root:nth-child(2) {
+            .subtitle {
                 font-size: 16px;
                 margin-bottom: 28px;
                 color: #787f81;
+
+            }
+
+            .selectIDsLink {
+                font-size: 16px;
+                color: $link;
+                margin-left: 12px;
+                cursor: pointer;
             }
         }
 
@@ -866,6 +875,29 @@
                             margin: 0;
                         }
                     }
+                    .rappTag {
+                        width: 569px;
+                        display: flex;
+                        align-items: flex-start;
+                        margin-top: 32px;
+
+                        .MuiTextField-root:nth-child(1){
+                            width: 434px;
+                            margin-right: 16px;
+                        }
+
+                        .MuiFormGroup-root:nth-child(2) {
+                            width: 80px;
+                        }
+
+                        .MuiRadio-root {
+                            padding: 0;
+                        }
+
+                        .MuiTypography-root {
+                            margin: 0;
+                        }
+                    }
                 }
 
             }
@@ -926,16 +958,12 @@
         display: none;
     }
 
-    // .MuiDataGrid-cell--withRenderer {
-    //     .MuiInputBase-root {
-    //         height: 40px;
-    //         width: 80%;
-    //     }
-    // }
-
     .MuiDataGrid-root {
         border: none;
         color: $text;
+        margin: 60px auto;
+        width: 100%;
+        height: 335px;
     }
 
     .MuiDataGrid-root .MuiDataGrid-columnHeader,
@@ -952,6 +980,10 @@
         color: #787f81;
     }
 
+    .findSpecies {
+        width: 100%;
+        margin-top: 50px;
+    }
 }
 
 //HidableDetails
@@ -1109,4 +1141,167 @@
 .MuiTooltip-tooltip {
     color: #fcba19;
     background-color: #d8292f;
+}
+
+//multiple page
+.updateDetailsDialog {
+    .MuiDialog-paper {
+        width: 975px;
+        padding: 40px 45px 60px;
+    }
+
+    .MuiDialogTitle-root {
+        font-size: 18px;
+        font-family: 'BCSans-Bold';
+        padding: 0 0 12px 0;
+    }
+
+    .MuiDialogContent-root {
+        padding: 0;
+
+        .MuiTypography-root:nth-child(1) {
+            font-family: 'BCSans-Bold';
+            font-size: 14px;
+            color: $text;
+            margin-bottom: 12px;
+        }
+
+        .MuiTypography-root:nth-child(2) {
+            font-size: 13px;
+            color: #868e96;
+        }
+
+        .twoColumns {
+            width: calc((100% - 32px) / 2);
+            margin-top: 24px;
+        }
+
+        .marginR {
+            margin-right: 32px;
+        }
+
+        .oneColumn {
+            width: 100%;
+            margin-top: 24px;
+        }
+    }
+
+    .changeStatus {
+        width: 529px;
+        margin-block: 24px;
+    }
+
+    .MuiDialogActions-root {
+        padding: 0;
+        margin-top: 35px;
+
+        .cardButtons {
+            display: flex;
+            justify-content: flex-end;
+
+            .update_btn {
+                width: 100px;
+                height: 35px;
+                text-transform: capitalize;
+                font-size: 14px;
+                margin-left: 8px;
+            }
+        }
+    }
+}
+
+.updateRegionDialog {
+    .MuiDialog-paper {
+        width: 728px;
+        // padding: 40px 45px 78px;
+    }
+
+    .MuiDialogTitle-root {
+        font-size: 14px;
+        background-color: #1a5a96;
+        color: #ffffff;
+    }
+
+    .MuiDialogContent-root {
+        .selectRange {
+            display: flex;
+            margin-top: 32px;
+        }
+
+        .MuiAutocomplete-root {
+            width: 328px;
+        }
+
+        .MuiAutocomplete-root:nth-child(2) {
+            margin: 0 0 24px 24px;
+        }
+
+        .region {
+            width: 680px;
+            margin-bottom: 24px;
+        }
+    }
+
+
+    .MuiDialogActions-root {
+
+
+        .cardButtons {
+            display: flex;
+            justify-content: flex-end;
+            margin: 0px 8px 45px 0;
+
+            .update_btn {
+                width: 100px;
+                height: 35px;
+                text-transform: capitalize;
+                font-size: 14px;
+                margin-right: 8px;
+            }
+        }
+    }
+}
+
+.selectMultipleIDsDialog {
+    .MuiDialog-paper {
+        width: 580px;
+        // padding: 40px 45px 78px;
+    }
+
+
+    .MuiDialogTitle-root {
+        font-size: 16px;
+        margin-top: 20px;
+    }
+
+    .MuiDialogContent-root {
+        .MuiDataGrid-root {
+            border: none;
+            color: #787f81;
+        }
+
+        .MuiDataGrid-columnSeparator {
+            display: none;
+        }
+
+    }
+
+
+    .MuiDialogActions-root {
+
+
+        .cardButtons {
+            display: flex;
+            justify-content: flex-end;
+            margin: 10px 8px 45px 0;
+
+            .update_btn {
+                width: 100px;
+                height: 35px;
+                text-transform: capitalize;
+                font-size: 14px;
+                margin-right: 8px;
+            }
+        }
+    }
 }
