--- a/src/main/styles/list.scss
+++ b/src/main/styles/list.scss
@@ -3,13 +3,20 @@
 
 .list_page {
 	width: 1344px;
-	padding: 16px 4px 4px;
+	padding: 16px 130px;
 	border-radius: 5px;
+
+	.MuiTypography-h1{
+		margin-block: 24px;
+	}
+	a{
+		cursor: pointer;
+	}
 }
 
 table.inventory_table {
 
-	min-width: 80%;
+	min-width: 100%;
 	margin: auto;
 
 	tbody {
