--- a/src/main/styles/nav.scss
+++ b/src/main/styles/nav.scss
@@ -19,7 +19,7 @@
 
 	ul {
 		margin: 0;
-		padding: 16px 0;
+		padding: 10px 0;
 
 		list-style-type: none;
 
@@ -55,6 +55,7 @@
 		&.devModeToggle {
 			flex-grow: 1;
 			text-align: right;
+			font-size: 1rem;
 		}
 	}
 }
